fix build, fix layout shift

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,7 @@
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
-  --color-background: var(--background);
+  --color-background: hsl(var(--background));
   --color-foreground: var(--foreground);
   --font-sans: var(--font-lato);
   --font-mono: var(--font-jetbrains);
@@ -15,7 +15,7 @@
   --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
   --color-sidebar-primary: var(--sidebar-primary);
   --color-sidebar-foreground: var(--sidebar-foreground);
-  --color-sidebar: var(--sidebar);
+  --color-sidebar: hsl(var(--sidebar));
   --color-chart-5: var(--chart-5);
   --color-chart-4: var(--chart-4);
   --color-chart-3: var(--chart-3);
@@ -48,8 +48,10 @@
 
 :root {
   --radius: 0.625rem;
-  --header-height: 88px;
-  --background: #f7eddf;
+  --safe-area-top: 0px;
+  --header-base-block: 3.75rem;
+  --header-height: calc(var(--safe-area-top) + var(--header-base-block));
+  --background: 35 60% 92%;
   --foreground: #050505;
   --card: #ffffff;
   --card-foreground: #111111;
@@ -72,7 +74,7 @@
   --chart-3: #f4ee78;
   --chart-4: #0a0a0a;
   --chart-5: #f7eddf;
-  --sidebar: #ffffff;
+  --sidebar: var(--background);
   --sidebar-foreground: #050505;
   --sidebar-primary: #f16623;
   --sidebar-primary-foreground: #ffffff;
@@ -89,7 +91,7 @@
 }
 
 .dark {
-  --background: #050505;
+  --background: 0 0% 2%;
   --foreground: #f7f6f2;
   --card: #0f0f0f;
   --card-foreground: #f7f6f2;
@@ -112,7 +114,7 @@
   --chart-3: #1769a4;
   --chart-4: #f7eddf;
   --chart-5: #ffffff;
-  --sidebar: #0f0f0f;
+  --sidebar: var(--background);
   --sidebar-foreground: #f7f6f2;
   --sidebar-primary: #f4ee78;
   --sidebar-primary-foreground: #0a0a0a;
